# trojan

./: CMakeLists.txt  README.md
examples/: buy.json  server.json-example
log/: tro.txt  trojan.t  trojan.txt
src/: main.cpp
src/core/: config.cpp  config.h  log.cpp  log.h  service.cpp  service.h
src/icmp/: gui-config.json  icmp.cpp  icmp.hpp  ipv4.cpp  ipv4.hpp  ping.cpp  ping.hpp  time_data.cpp  time_data.hpp
src/proto/: socks5address.cpp  socks5address.h  trojanrequest.cpp  trojanrequest.h
src/session/: clientsession.cpp  clientsession.h  serversession.cpp  serversession.h  session.cpp  session.h
